--- a/index.html
+++ b/index.html
@@ -4,25 +4,72 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="normalize.css"/>
-        <link rel="stylesheet" type="text/css" href="main.css"/>
+        <link rel="stylesheet" type="text/css" href="main.css?v=3"/>
         <title>千子文</title>
     </head>
     <body>
         <button class="btn-clear-all">clear all</button>
+        <button class="btn-show-all">show all</button>
         <ol>
             <li>
                 <div class="input-group">
-                    <span class="input" contenteditable="true" placeholder="characters" data-answer="abcde"></span>
+                    <span class="input" contenteditable="true" placeholder="characters" data-answer="天地玄黃"></span>
                     <button class="btn-show">show</button>
                     <button class="btn-clear">clear</button>
                 </div>
                 <div class="input-group">
-                    <span class="input" contenteditable="true" placeholder="characters" data-answer="12345"></span>
+                    <span class="input" contenteditable="true" placeholder="pronunciation" data-answer="천지현황"></span>
+                    <button class="btn-show">show</button>
+                    <button class="btn-clear">clear</button>
+                </div>
+                <div class="input-group">
+                    <span class="input" contenteditable="true" placeholder="meaning" data-answer="하늘은 위에 있으니 그 빛이 검고 그윽하며, 땅은 아래 있으니 그 빛이 누르다."></span>
                     <button class="btn-show">show</button>
                     <button class="btn-clear">clear</button>
                 </div>
             </li>
+            <li>
+                <div class="input-group">
+                    <span class="input" contenteditable="true" placeholder="characters" data-answer="宇宙洪荒"></span>
+                    <button class="btn-show">show</button>
+                    <button class="btn-clear">clear</button>
+                </div>
+                <div class="input-group">
+                    <span class="input" contenteditable="true" placeholder="pronunciation" data-answer="우주홍황"></span>
+                    <button class="btn-show">show</button>
+                    <button class="btn-clear">clear</button>
+                </div>
+                <div class="input-group">
+                    <span class="input" contenteditable="true" placeholder="meaning" data-answer="하늘과 땅 사이는 넓고 커서 끝이 없다. 즉 세상의 넓음을 말한다."></span>
+                    <button class="btn-show">show</button>
+                    <button class="btn-clear">clear</button>
+                </div>
+            </li>
+            <li>some other elem</li>
+            <li>some other elem</li>
+            <li>some other elem</li>
+            <li>some other elem</li>
+            <li>some other elem</li>
+            <li>some other elem</li>
+            <li>some other elem</li>
+            <li>some other elem</li>
+            <li>some other elem</li>
+            <li>some other elem</li>
+            <li>some other elem</li>
+            <li>some other elem</li>
+            <li>some other elem</li>
+            <li>some other elem</li>
+            <li>some other elem</li>
+            <li>some other elem</li>
+            <li>some other elem</li>
+            <li>some other elem</li>
+            <li>some other elem</li>
+            <li>some other elem</li>
+            <li>some other elem</li>
+            <li>some other elem</li>
+            <li>some other elem</li>
+            <li>some other elem</li>
         </ol>
-        <script src="main.js" async></script>
+        <script src="main.js?v=2" async></script>
     </body>
 </html>
