fix title, fix layout

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="normalize.css"/>
-        <link rel="stylesheet" type="text/css" href="main.css?v=3"/>
-        <title>千子文</title>
+        <link rel="stylesheet" type="text/css" href="main.css?v=4"/>
+        <title>千字文</title>
     </head>
     <body>
-        <button class="btn-clear-all">clear all</button>
         <button class="btn-show-all">show all</button>
+        <button class="btn-clear-all">clear all</button>
         <ol>
             <li>
                 <div class="input-group">
