--- a/index.html
+++ b/index.html
@@ -8,41 +8,41 @@
         <title>千字文</title>
     </head>
     <body>
-        <button class="btn-show-all">show all</button>
-        <button class="btn-clear-all">clear all</button>
+        <button data-action="show-all">show all</button>
+        <button data-action="clear-all">clear all</button>
         <ol>
             <li>
                 <div class="input-group">
                     <span class="input" contenteditable="true" placeholder="characters" data-answer="天地玄黃"></span>
-                    <button class="btn-show">show</button>
-                    <button class="btn-clear">clear</button>
+                    <button data-action="show">show</button>
+                    <button data-action="clear">clear</button>
                 </div>
                 <div class="input-group">
                     <span class="input" contenteditable="true" placeholder="pronunciation" data-answer="천지현황"></span>
-                    <button class="btn-show">show</button>
-                    <button class="btn-clear">clear</button>
+                    <button data-action="show">show</button>
+                    <button data-action="clear">clear</button>
                 </div>
                 <div class="input-group">
                     <span class="input" contenteditable="true" placeholder="meaning" data-answer="하늘은 위에 있으니 그 빛이 검고 그윽하며, 땅은 아래 있으니 그 빛이 누르다."></span>
-                    <button class="btn-show">show</button>
-                    <button class="btn-clear">clear</button>
+                    <button data-action="show">show</button>
+                    <button data-action="clear">clear</button>
                 </div>
             </li>
             <li>
                 <div class="input-group">
                     <span class="input" contenteditable="true" placeholder="characters" data-answer="宇宙洪荒"></span>
-                    <button class="btn-show">show</button>
-                    <button class="btn-clear">clear</button>
+                    <button data-action="show">show</button>
+                    <button data-action="clear">clear</button>
                 </div>
                 <div class="input-group">
                     <span class="input" contenteditable="true" placeholder="pronunciation" data-answer="우주홍황"></span>
-                    <button class="btn-show">show</button>
-                    <button class="btn-clear">clear</button>
+                    <button data-action="show">show</button>
+                    <button data-action="clear">clear</button>
                 </div>
                 <div class="input-group">
                     <span class="input" contenteditable="true" placeholder="meaning" data-answer="하늘과 땅 사이는 넓고 커서 끝이 없다. 즉 세상의 넓음을 말한다."></span>
-                    <button class="btn-show">show</button>
-                    <button class="btn-clear">clear</button>
+                    <button data-action="show">show</button>
+                    <button data-action="clear">clear</button>
                 </div>
             </li>
             <li>some other elem</li>
@@ -70,6 +70,6 @@
             <li>some other elem</li>
             <li>some other elem</li>
         </ol>
-        <script src="main.js?v=2" async></script>
+        <script src="main.js?v=3" async></script>
     </body>
 </html>
