a bit of refactoring

--- a/index.html
+++ b/index.html
@@ -45,6 +45,23 @@
                     <button data-action="clear">clear</button>
                 </div>
             </li>
+            <li>
+                <div class="input-group">
+                    <span class="input" contenteditable="true" placeholder="characters" data-answer=""></span>
+                    <button data-action="show">show</button>
+                    <button data-action="clear">clear</button>
+                </div>
+                <div class="input-group">
+                    <span class="input" contenteditable="true" placeholder="pronunciation" data-answer=""></span>
+                    <button data-action="show">show</button>
+                    <button data-action="clear">clear</button>
+                </div>
+                <div class="input-group">
+                    <span class="input" contenteditable="true" placeholder="meaning" data-answer=""></span>
+                    <button data-action="show">show</button>
+                    <button data-action="clear">clear</button>
+                </div>
+            </li>
             <li>some other elem</li>
             <li>some other elem</li>
             <li>some other elem</li>
@@ -70,6 +87,6 @@
             <li>some other elem</li>
             <li>some other elem</li>
         </ol>
-        <script src="main.js?v=4" async></script>
+        <script src="main.js?v=5" async></script>
     </body>
 </html>
