add some structure

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="normalize.css"/>
-        <link rel="stylesheet" type="text/css" href="main.css?v=4"/>
+        <link rel="stylesheet" type="text/css" href="css/normalize.css"/>
+        <link rel="stylesheet" type="text/css" href="css/main.css?v=4"/>
         <title>千字文</title>
     </head>
     <body>
@@ -87,6 +87,6 @@
             <li>some other elem</li>
             <li>some other elem</li>
         </ol>
-        <script src="main.js?v=5" async></script>
+        <script src="js/main.js?v=5" async></script>
     </body>
 </html>
