add basic content autogeneration

--- a/public/index.html
+++ b/public/index.html
@@ -11,81 +11,297 @@
         <button data-action="show-all">show all</button>
         <button data-action="clear-all">clear all</button>
         <ol>
-            <li>
-                <div class="input-group">
-                    <span class="input" contenteditable="true" placeholder="characters" data-answer="天地玄黃"></span>
-                    <button data-action="show">show</button>
-                    <button data-action="clear">clear</button>
-                </div>
-                <div class="input-group">
-                    <span class="input" contenteditable="true" placeholder="pronunciation" data-answer="천지현황"></span>
-                    <button data-action="show">show</button>
-                    <button data-action="clear">clear</button>
-                </div>
-                <div class="input-group">
-                    <span class="input" contenteditable="true" placeholder="meaning" data-answer="하늘은 위에 있으니 그 빛이 검고 그윽하며, 땅은 아래 있으니 그 빛이 누르다."></span>
-                    <button data-action="show">show</button>
-                    <button data-action="clear">clear</button>
-                </div>
-            </li>
-            <li>
-                <div class="input-group">
-                    <span class="input" contenteditable="true" placeholder="characters" data-answer="宇宙洪荒"></span>
-                    <button data-action="show">show</button>
-                    <button data-action="clear">clear</button>
-                </div>
-                <div class="input-group">
-                    <span class="input" contenteditable="true" placeholder="pronunciation" data-answer="우주홍황"></span>
-                    <button data-action="show">show</button>
-                    <button data-action="clear">clear</button>
-                </div>
-                <div class="input-group">
-                    <span class="input" contenteditable="true" placeholder="meaning" data-answer="하늘과 땅 사이는 넓고 커서 끝이 없다. 즉 세상의 넓음을 말한다."></span>
-                    <button data-action="show">show</button>
-                    <button data-action="clear">clear</button>
-                </div>
-            </li>
-            <li>
-                <div class="input-group">
-                    <span class="input" contenteditable="true" placeholder="characters" data-answer=""></span>
-                    <button data-action="show">show</button>
-                    <button data-action="clear">clear</button>
-                </div>
-                <div class="input-group">
-                    <span class="input" contenteditable="true" placeholder="pronunciation" data-answer=""></span>
-                    <button data-action="show">show</button>
-                    <button data-action="clear">clear</button>
-                </div>
-                <div class="input-group">
-                    <span class="input" contenteditable="true" placeholder="meaning" data-answer=""></span>
-                    <button data-action="show">show</button>
-                    <button data-action="clear">clear</button>
-                </div>
-            </li>
-            <li>some other elem</li>
-            <li>some other elem</li>
-            <li>some other elem</li>
-            <li>some other elem</li>
-            <li>some other elem</li>
-            <li>some other elem</li>
-            <li>some other elem</li>
-            <li>some other elem</li>
-            <li>some other elem</li>
-            <li>some other elem</li>
-            <li>some other elem</li>
-            <li>some other elem</li>
-            <li>some other elem</li>
-            <li>some other elem</li>
-            <li>some other elem</li>
-            <li>some other elem</li>
-            <li>some other elem</li>
-            <li>some other elem</li>
-            <li>some other elem</li>
-            <li>some other elem</li>
-            <li>some other elem</li>
-            <li>some other elem</li>
-            <li>some other elem</li>
-            <li>some other elem</li>
+
+<!-- number 1 -->
+<li>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="characters" data-answer="天地玄黃"></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="pronunciation" data-answer="천지현황"></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="korean" data-answer="하늘은 위에 있으니 그 빛이 검고 그윽하며, 땅은 아래 있으니 그 빛이 누르다."></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="russian" data-answer="небо темно, земля желта"></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+</li>
+
+<!-- number 2 -->
+<li>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="characters" data-answer="宇宙洪荒"></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="pronunciation" data-answer="우주홍황"></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="korean" data-answer="하늘과 땅 사이는 넓고 커서 끝이 없다. 즉 세상의 넓음을 말한다."></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="russian" data-answer="космос беспредельно широк"></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+</li>
+
+<!-- number 3 -->
+<li>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="characters" data-answer="日月盈昃"></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="pronunciation" data-answer="일월영측"></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="korean" data-answer="해는 서쪽으로 기울고 달도 차면 점차 이지러진다. 즉 우주의 진리 말한다."></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="russian" data-answer="солнце всходит и заходит, луна растет и убывает"></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+</li>
+
+<!-- number 4 -->
+<li>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="characters" data-answer="辰宿列張"></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="pronunciation" data-answer="진숙렬장"></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="korean" data-answer="별자리가 하늘에 넓게 벌려져 있음을 말한다."></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="russian" data-answer="созвездия заполняют небосвод"></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+</li>
+
+<!-- number 5 -->
+<li>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="characters" data-answer="寒來暑往"></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="pronunciation" data-answer="한래서왕"></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="korean" data-answer="추위가 오면 더위가 가고 더위가 오면 추위가 간다. 즉 계절의 바뀜을 말한다."></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="russian" data-answer="с приходом холодов уходит жара"></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+</li>
+
+<!-- number 6 -->
+<li>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="characters" data-answer="秋收冬藏"></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="pronunciation" data-answer="추수동장"></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="korean" data-answer="가을에 곡식을 거두고 겨울이 오면 저장한다."></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="russian" data-answer="осень запасает, а зима сберегает"></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+</li>
+
+<!-- number 7 -->
+<li>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="characters" data-answer="閏餘成歲"></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="pronunciation" data-answer="윤여성세"></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="korean" data-answer="일년 이십사절기의 나머지 시각을 모아 윤달로 하여 한 해를 이루었다."></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="russian" data-answer=""></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+</li>
+
+<!-- number 8 -->
+<li>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="characters" data-answer="律呂調陽"></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="pronunciation" data-answer="률려조양"></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="korean" data-answer="율려가 천지간의 양기를 고르게 하니, 즉 율은 양이요, 려는 음이다."></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="russian" data-answer=""></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+</li>
+
+<!-- number 9 -->
+<li>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="characters" data-answer="雲騰致雨"></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="pronunciation" data-answer="운등치우"></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="korean" data-answer="수증기가 올라가 구름이 되고, 찬 기운을 만나 비가 된다. 즉 자연의 기상을 말한다."></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="russian" data-answer=""></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+</li>
+
+<!-- number 10 -->
+<li>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="characters" data-answer="露結爲霜"></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="pronunciation" data-answer="로결위상"></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="korean" data-answer="이슬이 맺어 서리가 되니 밤기운이 풀잎에 물방울처럼 이슬을 이룬다."></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+<div class="input-group">
+    <span class="input" contenteditable="true" placeholder="russian" data-answer=""></span>
+    <button data-action="show">show</button>
+    <button data-action="clear">clear</button>
+</div>
+
+</li>
+
         </ol>
         <script src="js/main.js?v=5" async></script>
     </body>
