--- a/public/index.html
+++ b/public/index.html
@@ -86,13 +86,13 @@
 </div>
 
 <div class="input-group">
-    <span class="input" contenteditable="true" placeholder="korean" data-answer="해는 서쪽으로 기울고 달도 차면 점차 이지러진다. 즉 우주의 진리 말한다."></span>
+    <span class="input" contenteditable="true" placeholder="korean" data-answer="해는 서쪽으로 기울고 달도 차면 점차 이지러진다. 즉 우주의 진리를 말한다."></span>
     <button data-action="show">show</button>
     <button data-action="clear">clear</button>
 </div>
 
 <div class="input-group">
-    <span class="input" contenteditable="true" placeholder="russian" data-answer="солнце всходит и заходит, луна растет и убывает"></span>
+    <span class="input" contenteditable="true" placeholder="russian" data-answer="солнце всходит и заходит, луна растёт и убывает"></span>
     <button data-action="show">show</button>
     <button data-action="clear">clear</button>
 </div>
