--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,13 @@
         <title>千字文</title>
     </head>
     <body>
-        <button data-action="show-all">show all</button>
-        <button data-action="clear-all">clear all</button>
+        <header class="center">
+            <h1>千字文</h1>
+        </header>
+        <div class="center">
+            <button data-action="show-all">show all</button>
+            <button data-action="clear-all">clear all</button>
+        </div>
         <ol>
 
 <!-- number 1 -->
